--- a/labs/Lab 1 - Python and NumPy.ipynb
+++ b/labs/Lab 1 - Python and NumPy.ipynb
@@ -39,7 +39,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**YOUR ANSWER HERE**"
+    "- Honestly, the Jupyter Notebook is pretty clear. Rather than having questions on this, I am moreso confused on Pandas. I am going to do more research on it as time goes on to "
    ]
   },
   {
